tests/error/fullOfErrors/bar.tsx
export const bar = 123;
bar = "hello";